# mcp-sse-server

./: .env.example  .gitignore  README.md  mcp_server.py  pyproject.toml  pytest.ini
deployment/: Dockerfile
deployment/bicep/: deploy.sh  main.bicep
src/: __init__.py  config.py  mcp_tools.py
src/actions/: __init__.py  send_email.py  status.py
src/utils/: __init__.py  email.py
tests/: test_config.py  test_e2e.py  test_email_utils.py  test_mcp_tools.py  test_send_email_action.py
